# INFORV_MEDEVRV_UML

./: .gitignore  Battleships.cpp  Battleships.h  CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classes.html  dir_15c8d1b297e72641f9548bb39428e796.html  dir_162a0b4ad1eafb1d1e414beca64bd86f.html  dir_26e161bd706b689737ea0ef524ddc480.html  dir_5ce881c5424b422eba710f7ab3cafda8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_804e9c8a6f85b64a196ad58c4618e191.html  dir_804e9c8a6f85b64a196ad58c4618e191_dep.map  dir_804e9c8a6f85b64a196ad58c4618e191_dep.md5  dir_84076d143950730dd10e65c0d5ce8aa7.html  dir_c54dbe3ee23e5b10b669774d1ead0453.html  dir_cb32b1f319a2e75f85330d5e0939b50f.html  dir_eec4be765c5bcbe9061be0800991cd9d.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
docs/latex/: annotated.tex  files.tex  refman.tex
src/: Battleships.cpp  Battleships.h  Board.cpp  Board.h  BoardFactory.cpp  BoardFactory.h  GameManager.cpp  GameManager.h  Ship.cpp  Ship.h
src/Enums/: Direction.h  ShipTypes.cpp  ShipTypes.h
(+77 files in other folders)
